[gd_scene load_steps=5 format=3 uid="uid://ce2swcu7afa84"]

[ext_resource type="Script" uid="uid://cwf6dntlanjof" path="res://Utilities/Autoloads/Pause.gd" id="1_ni8ss"]
[ext_resource type="Script" uid="uid://dqolwe002khq0" path="res://Menus/OptionsMenu.gd" id="2_wyn1i"]
[ext_resource type="FontFile" uid="uid://dhw1gc0ml3wen" path="res://Menus/Fonts/Dinofans.ttf" id="3_wcgje"]
[ext_resource type="Theme" uid="uid://csp5gvg4q0sb4" path="res://Utilities/MainTheme.tres" id="4_k476t"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("options")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ni8ss")
options = NodePath("BG/Options")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.185, 0.255917, 0.37, 0.968627)

[node name="Options" type="MarginContainer" parent="BG" node_paths=PackedStringArray("master_slider", "music_slider", "sfx_slider")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 75
script = ExtResource("2_wyn1i")
master_slider = NodePath("VLayout/Master/VLayout/MasterSlider")
music_slider = NodePath("VLayout/Music/VLayout/MusicSlider")
sfx_slider = NodePath("VLayout/SFX/VLayout/SFXSlider")

[node name="VLayout" type="VBoxContainer" parent="BG/Options"]
layout_mode = 2
theme_override_constants/separation = 160

[node name="Master" type="Control" parent="BG/Options/VLayout"]
layout_mode = 2

[node name="VLayout" type="VBoxContainer" parent="BG/Options/VLayout/Master"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BG/Options/VLayout/Master/VLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.506024, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.165733, 0.324219, 1)
theme_override_fonts/font = ExtResource("3_wcgje")
theme_override_font_sizes/font_size = 48
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="BG/Options/VLayout/Master/VLayout"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 50.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Music" type="Control" parent="BG/Options/VLayout"]
layout_mode = 2

[node name="VLayout" type="VBoxContainer" parent="BG/Options/VLayout/Music"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BG/Options/VLayout/Music/VLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.506024, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.165733, 0.324219, 1)
theme_override_fonts/font = ExtResource("3_wcgje")
theme_override_font_sizes/font_size = 48
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="BG/Options/VLayout/Music/VLayout"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 50.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="SFX" type="Control" parent="BG/Options/VLayout"]
layout_mode = 2

[node name="VLayout" type="VBoxContainer" parent="BG/Options/VLayout/SFX"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BG/Options/VLayout/SFX/VLayout"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.506024, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0.165733, 0.324219, 1)
theme_override_fonts/font = ExtResource("3_wcgje")
theme_override_font_sizes/font_size = 48
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="BG/Options/VLayout/SFX/VLayout"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 50.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Buttons" type="Control" parent="BG/Options/VLayout"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="ApplyContainer" type="MarginContainer" parent="BG/Options/VLayout/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.6
anchor_right = 1.0
anchor_bottom = -0.44
offset_left = 64.0
offset_top = 36.0
offset_right = -820.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="Close" type="Button" parent="BG/Options/VLayout/Buttons/ApplyContainer"]
layout_mode = 2
theme = ExtResource("4_k476t")
text = "Close"
flat = true

[node name="QuitContainer" type="MarginContainer" parent="BG/Options/VLayout/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.6
anchor_right = 1.0
anchor_bottom = -0.44
offset_left = 852.0
offset_top = 36.0
offset_right = -62.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="Quit" type="Button" parent="BG/Options/VLayout/Buttons/QuitContainer"]
layout_mode = 2
theme = ExtResource("4_k476t")
text = "Quit"
flat = true

[node name="Pause" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0401235
anchor_right = 1.0
anchor_bottom = 1.0679
offset_bottom = -599.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_wcgje")
theme_override_font_sizes/font_size = 72
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="value_changed" from="BG/Options/VLayout/Master/VLayout/MasterSlider" to="BG/Options" method="_master_volume_changed"]
[connection signal="value_changed" from="BG/Options/VLayout/Music/VLayout/MusicSlider" to="BG/Options" method="_music_volume_changed"]
[connection signal="value_changed" from="BG/Options/VLayout/SFX/VLayout/SFXSlider" to="BG/Options" method="_sfx_volume_changed"]
[connection signal="pressed" from="BG/Options/VLayout/Buttons/ApplyContainer/Close" to="." method="_pause"]
[connection signal="pressed" from="BG/Options/VLayout/Buttons/QuitContainer/Quit" to="." method="_quit"]
